--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,20 @@
 {
     "name": "kerackser/license-client",
-    "description": "Una biblioteca de cliente para validar licencias en proyectos de Laravel.",
+    "description": "License validation client for Laravel and WordPress projects",
     "type": "library",
+    "authors": [
+        {
+            "name": "kerack",
+            "email": "kerack@3mas1r.com"
+        }
+    ],
+    "require": {
+        "php": ">=7.2"
+    },
     "autoload": {
         "psr-4": {
             "Kerackser\\LicenseClient\\": "src/"
         }
     },
-    "require": {
-        "php": ">=7.2.0",
-        "guzzlehttp/guzzle": "^7.0"
-    }
+    "license": "MIT"
 }
