--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,13 @@
     "require": {
         "php": ">=7.2"
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Kerackser\\LicenseClient\\LicenseClientServiceProvider"
+            ]
+        }
+    },
     "autoload": {
         "psr-4": {
             "Kerackser\\LicenseClient\\": "src/"
